# reqsnaked

./: .gitignore  Cargo.toml  Makefile  README.md  mkdocs.yaml  mkdocs.yml  pyproject.toml  reqsnaked.pyi  versions.json
.github/workflows/: CI.yml  deploy-gh-docs.yml
.weee/: project.version.toml
0.1/: 404.html  index.html  sitemap.xml
0.1-beta/: 404.html  index.html  sitemap.xml
0.1-beta/coming-soon/: index.html
0.1-beta/contributing/: index.html
0.1-beta/css/: theme.css
0.1-beta/search/: search_index.json
0.1-beta/support/: index.html
0.1-beta/user-guide/: index.html
0.1-beta/user-guide/auth/: index.html
0.1-beta/user-guide/basics/: index.html
0.1-beta/user-guide/chunks/: index.html
0.1-beta/user-guide/cookies/: index.html
0.1-beta/user-guide/form/: index.html
0.1-beta/user-guide/headers/: index.html
0.1-beta/user-guide/json/: index.html
0.1-beta/user-guide/multipart/: index.html
0.1-beta/user-guide/query-string/: index.html
0.1-beta/user-guide/raw-response/: index.html
0.1/coming-soon/: index.html
0.1/contributing/: index.html
0.1/cooming-soon/: index.html
0.1/search/: search_index.json
0.1/support/: index.html
0.1/user-guide/: index.html
0.1/user-guide/auth/: index.html
0.1/user-guide/basics/: index.html
0.1/user-guide/chunks/: index.html
0.1/user-guide/cookies/: index.html
0.1/user-guide/form/: index.html
0.1/user-guide/headers/: index.html
benchmarks/: README.md  test_libs.py
benchmarks/jsons/: large.json  medium.json  small.json
devel/: 404.html  index.html
devel/coming-soon/: index.html
devel/contributing/: index.html
devel/support/: index.html
devel/user-guide/: index.html
guide/: contributing.md  index.md  support.md
guide/css/: theme.css
guide/user-guide/: auth.md  basics.md  chunks.md  cookies.md  form.md  headers.md  index.md  json.md  multipart.md  query-string.md  raw-response.md  setup-request.md
latest/coming-soon/: index.html
latest/cooming-soon/: index.html
latest/user-guide/: index.html
sandbox/: bar.py  bazz.py  eee.py  fizz.py  foo.py  rrr.py
site/: 404.html  index.html  sitemap.xml
site/assets/: reqsnaked-filled.psd  reqsnaked.psd
site/coming-soon/: index.html
site/contributing/: index.html
site/support/: index.html
site/user-guide/: index.html
src/: exceptions.rs  json.rs  lib.rs  primitives.rs  request.rs
src/aio/: client.rs  mod.rs  request.rs  response.rs
src/py2rs/: base.rs  duration.rs  http_method.rs  mod.rs  query.rs  url.rs
src/rs2py/: bytes.rs  header_map.rs  http_version.rs  mod.rs
tests/: conftest.py  test_client.py  test_mess.py  test_request.py  test_sum.py
(+39 files in other folders)
