[package]
name = "reqsnaked"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "reqsnaked"
crate-type = ["cdylib"]

[dependencies]
futures = "0.3.26"
http = "0.2.9"
pyo3 = { version = "0.16.3", features = ["extension-module"] }
pyo3-asyncio = { version = "0.16.0", features = ["tokio-runtime"] }
reqwest = { version = "0.11.14", features = ["tokio-rustls", "trust-dns", "trust-dns-resolver", "socks", "serde_json", "rustls", "json", "hyper-rustls", "async-compression", "cookies", "brotli", "gzip", "blocking"] }
serde = "1.0.152"
serde_json = "1.0.93"
url = "2.3.1"
