[build-system]
requires = ["maturin>=0.12,<0.13"]
build-backend = "maturin"

[project]
name = "reqsnaked"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]


[project.optional-dependencies]
docs = [
    "mkdocs==1.4.2",
    "mkdocs-material==9.0.14",
    "mike==1.1.2",
    "pillow==9.4.0",
    "cairosvg==2.6.0"
]
